--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -17,7 +17,7 @@ jobs:
           base-ref: 'v0.0.1'
       - name: Reverse the generated changelog
         id: changelog-rev
-        uses: metcalfc/changelog-generator@Minecraft-1.19.60.26
+        uses: metcalfc/changelog-generator@main
         with:
           myToken: ${{ secrets.GITHUB_TOKEN }}
           head-ref: 'v0.0.2'
@@ -25,7 +25,7 @@ jobs:
           reverse: 'true'
       - name: Explicitly do not reverse the generated changelog
         id: changelog-notrev
-        uses: metcalfc/changelog-generator@Minecraft-1.19.60.26
+        uses: metcalfc/changelog-generator@main
         with:
           myToken: ${{ secrets.GITHUB_TOKEN }}
           head-ref: 'v0.0.2'
